# soundcloud-service

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile
src/: main.rs  s3_client.rs
src/routes/: get_stream.rs  get_stream_by_id.rs  get_stream_by_token.rs  mod.rs  playlist.rs  search.rs  track.rs  tracks.rs  user.rs
