[package]
name = "soundcloud-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
soundcloud = { path = "libs/soundcloud" }
database-lib = { path = "libs/database-lib" }
domain = { path = "libs/domain-lib" }
utils-lib = { path = "./libs/utils-lib" }

tokio = { version = "1", features = [] }
dotenv = "0.15.0"
aws-sdk-s3 = { version = "1.112.0" }
aws-config = "1.8.10"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
